<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlFragment">

    <!-- Main Content -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/statusText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView" />

        <ImageView
            android:id="@+id/colorPreview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/statusText"
            android:background="@drawable/color_preview"
            android:contentDescription="@string/color_preview"/>

        <SeekBar
            android:id="@+id/redSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/colorPreview"
            android:layout_marginStart="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:max="255"
            android:progress="0"
            android:thumb="@drawable/red_thumb"
            android:thumbOffset="10dp" />

        <SeekBar
            android:id="@+id/greenSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/redSeekBar"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:max="255"
            android:progress="0"
            android:thumb="@drawable/green_thumb"
            android:thumbOffset="10dp" />

        <SeekBar
            android:id="@+id/blueSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/greenSeekBar"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:max="255"
            android:progress="0"
            android:thumb="@drawable/blue_thumb"
            android:thumbOffset="10dp" />

        <Spinner
            android:id="@+id/modeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/blueSeekBar"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/applyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/modeSpinner"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:text="@string/apply" />

        <LinearLayout
            android:id="@+id/presetButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/applyButton"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/presetButton1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/preset1" />

            <Button
                android:id="@+id/presetButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/preset2" />

            <Button
                android:id="@+id/presetButton3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/preset3" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>